src/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E-mail</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Main Office</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Phone_no__c</fullName>
        <label>Phone_no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>URL_link__c</fullName>
        <label>URL link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>